--- a/src/index.html
+++ b/src/index.html
@@ -66,9 +66,8 @@
       class="absolute inset-0 bg-gradient-to-br from-blue-100 to-white opacity-50 -z-10"
     ></div>
     <main
-      class="pt-36 mx-auto lg:ml-24 px-8 grid md:grid-cols-2 gap-12 items-center max-w-7xl relative"
+      class="pt-36 mx-auto px-8 grid md:grid-cols-2 gap-12 items-center max-w-7xl relative"
     >
-      <!-- Your existing content remains unchanged -->
       <div class="px-4">
         <h1 class="text-3xl md:text-5xl font-bold text-gray-900 mb-6">
           Connect, Collaborate, and Succeed Anywhere <br />
@@ -178,7 +177,7 @@
       <img
         src="https://st1.zoom.us/homepage/publish/images/A564922F-6F6D-461C-8B55-C9056F515251.png"
         alt="Wheel"
-        class="mt-11"
+        class="mt-10"
       />
       <div class="flex flex-col justify-center m-8 text-white">
         <h2 class="text-2xl md:text-4xl font-bold">
